@@ -16,6 +16,7 @@ Version 1.0 to be released
 - Added COutputCache::varyByRoute (Qiang)
 - Refactored UserIdentity generated by yiic webapp (Qiang)
 - Refactored CLinkPager (Qiang)
+- Refactored CFilter (Qiang)
 - Fixed a bug in CNumberValidator about checking upper limit (Qiang)
 - Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
 
